--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,33 +9,33 @@ body, html {
   margin: 0; }
 
 header .navbar {
-  overflow: hidden;
   background-color: #2D2D2D;
   position: fixed;
   top: 0;
   width: 100%;
   padding: 0;
   height: 5.18rem; }
-  header .navbar .container .links {
-    display: inline-block;
+  header .navbar .links {
+    display: block;
     height: 5.18rem;
     text-align: right;
     margin-right: 4rem;
     width: auto;
     border-top: 0;
     padding-top: .6rem; }
-    header .navbar .container .links .logo {
+    header .navbar .links .logo {
+      white-space: nowrap;
       padding-top: 15px;
       margin-right: 54rem; }
-      header .navbar .container .links .logo a {
+      header .navbar .links .logo a {
         font-weight: bolder;
         font-size: 22px; }
-        header .navbar .container .links .logo a i {
+        header .navbar .links .logo a i {
           color: #FF7878; }
-  header .navbar .container .home {
+  header .navbar .home {
     color: white;
     background-color: #FF7878; }
-  header .navbar .container a {
+  header .navbar a {
     font-size: .9rem;
     padding: 10px 15px;
     padding-top: 15px;
@@ -51,6 +51,8 @@ header .header {
   width: 100%;
   margin: 0;
   min-height: 500px;
+  background-position: center center;
+  background-size: cover;
   text-align: center;
   margin-top: -10px;
   padding-top: 20px; }
