--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,7 +20,7 @@ body,html{
 
 header{
 	.navbar{
-		overflow: hidden;
+		//overflow: hidden;
 		background-color: $black;
 		position: fixed;
 		top: 0; 
@@ -28,56 +28,57 @@ header{
 		padding:0;
 	    height:5.18rem; //  83/16=5.18
 
-	    .container{
-
-	    	.links{
-	    		display: inline-block;
-	    		height:5.18rem;
-	    		text-align: right;
-	    		margin-right: 4rem;
-	    		width: auto;
-	    		border-top: 0;
-	    		padding-top: .6rem;
-	    		& .logo{
-	    			padding-top: 15px;
-	    			margin-right: 54rem;
-	    			& a {
-
-	    				font-weight: bolder;
-	    				font-size: 22px; 
-
-	    				& i{
-	    					color: $pink;
 
 
+	    .links{
+	    	display: block;
+	    	height:5.18rem;
+	    	text-align: right;
+	    	margin-right: 4rem;
+	    	width: auto;
+	    	border-top: 0;
+	    	padding-top: .6rem;
+	    	& .logo{
+	    		white-space: nowrap;
+	    		padding-top: 15px;
+	    		margin-right: 54rem;
+	    		& a {
 
-	    				}
+	    			font-weight: bolder;
+	    			font-size: 22px; 
+
+	    			& i{
+	    				color: $pink;
+
+
 
 	    			}
-	    		} 
-	    	}
-	    	& .home{
-	    		color:white;
-	    		background-color:$pink;
-	    	}
-	    	& a{
 
-	    		font-size: .9rem;
-	    		padding: 10px 15px;
+	    		}
+	    	} 
+	    }
+	    & .home{
+	    	color:white;
+	    	background-color:$pink;
+	    }
+	    & a{
 
-	    		padding-top: 15px;
-	    		padding-bottom: 15px;
-	    		outline:none;
-	    		text-decoration: none;
-	    		color:$grey;
-	    		font-family:lato;
-	    		font-weight: 800;
-	    		line-height: 20px;
+	    	font-size: .9rem;
+	    	padding: 10px 15px;
 
-	    	}
+	    	padding-top: 15px;
+	    	padding-bottom: 15px;
+	    	outline:none;
+	    	text-decoration: none;
+	    	color:$grey;
+	    	font-family:lato;
+	    	font-weight: 800;
+	    	line-height: 20px;
+
+	    }
 
 
-	    } 
+	    
 
 	}
 
@@ -87,8 +88,8 @@ header{
 		width:100%;
 		margin:0;
 		min-height: 500px;
-		//background-position: center center; 
-		//background-size: cover;
+		background-position: center center; 
+		background-size: cover;
 		text-align: center; 
 		margin-top: -10px;
 		padding-top: 20px;
