--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,33 +191,50 @@ header .header {
   background-color: #EBEBEB; }
   .clients p {
     position: absolute; }
-  .clients .lowe {
-    width: 170px;
-    height: 200px;
-    background: url("../img/c01.gif") no-repeat; }
-  .clients .ms {
-    width: 170px;
-    height: 200px;
-    background: url("../img/c02.gif") no-repeat; }
-  .clients .sealy {
-    width: 170px;
-    height: 200px;
-    background: url("../img/c03.gif") no-repeat; }
-  .clients .circle {
-    width: 170px;
-    height: 200px;
-    background: url("../img/c04.gif") no-repeat; }
-  .clients .wells {
-    width: 170px;
-    height: 200px;
-    background: url("../img/c05.gif") no-repeat; }
+  .clients .wrap {
+    display: flex;
+    justify-content: center;
+    margin-top: 3rem;
+    margin-bottom: 6rem; }
+    .clients .wrap .lowe {
+      width: 170px;
+      height: 200px;
+      background: url("../img/c01.gif") no-repeat; }
+    .clients .wrap .ms {
+      width: 170px;
+      height: 200px;
+      background: url("../img/c02.gif") no-repeat; }
+    .clients .wrap .sealy {
+      width: 170px;
+      height: 200px;
+      background: url("../img/c03.gif") no-repeat; }
+    .clients .wrap .circle {
+      width: 170px;
+      height: 200px;
+      background: url("../img/c04.gif") no-repeat; }
+    .clients .wrap .wells {
+      width: 170px;
+      height: 200px;
+      background: url("../img/c05.gif") no-repeat; }
 
 .storytellers {
+  line-height: 1.7rem;
   color: white;
   background-color: #FF7878;
   display: flex;
   flex-direction: column;
   text-align: center; }
+  .storytellers h3 {
+    margin: 0;
+    margin-top: 2.6rem;
+    font-size: 18px; }
+  .storytellers .wrapper {
+    margin: 0 16.3rem 0 16.3rem; }
+    .storytellers .wrapper p {
+      font-family: lato;
+      font-weight: 300;
+      margin-top: 0.5rem;
+      margin-bottom: 3.8rem; }
 
 footer {
   width: 100%;
@@ -229,7 +246,9 @@ footer {
   color: #bdbdbd;
   font-size: 30px; }
   footer i {
-    margin-left: 2rem; }
+    margin-left: 2.4rem; }
+    footer i.fa-twitter {
+      margin-left: 0; }
     footer i:hover {
       color: #FF7878;
       cursor: pointer; }
